fix DepartmentServiceTest